--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -5,6 +5,10 @@
     padding: 0 16px;
 }
 
+.width-100 {
+    width: 100%;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -13,75 +17,95 @@
 .flex {
     display: flex;
     
-    &.column {
+    &-column {
         flex-direction: column;
     }
 
-    &.row {
+    &-row {
         flex-direction: row;
     }
 
-    &.row-reverse {
+    &-row-reverse {
         flex-direction: row-reverse;
     }
 
-    &.column-reverse {
+    &-column-reverse {
         flex-direction: column-reverse;
     }
 
-    &.wrap {
+    &-wrap {
         flex-wrap: wrap;
     }
 
-    &.nowrap {
+    &-nowrap {
         flex-wrap: nowrap;
     }
 
-    &.wrap-reverse {
+    &-wrap-reverse {
         flex-wrap: wrap-reverse;
     }
 
-    &.center {
+    &-center {
         justify-content: center;
     }
 
-    &.start {
+    &-start {
         justify-content: flex-start;
     }
 
-    &.end {
+    &-end {
         justify-content: flex-end;
     }
 
-    &.between {
+    &-between {
         justify-content: space-between;
     }
 
-    &.around {
+    &-around {
         justify-content: space-around;
     }
 
-    &.evenly {
+    &-evenly {
         justify-content: space-evenly;
     }
 
-    &.center {
+    &-center {
         align-items: center;
     }           
 
-    &.start {
+    &-start {
         align-items: flex-start;
     }
 
-    &.end {
+    &-end {
         align-items: flex-end;
     }
 
-    &.baseline {
+    &-baseline {
         align-items: baseline;
     }
 
-    &.stretch {
+    &-stretch {
         align-items: stretch;
     }
+}
+
+.flex-basis-50 {
+    flex-basis: 50%;
+    flex-shrink: 0;
+}
+
+.flex-basis-25 {
+    flex-basis: 25%;
+    flex-shrink: 0;
+}
+
+.flex-basis-75 {
+    flex-basis: 75%;
+    flex-shrink: 0;
+}
+
+.flex-basis-33 {
+    flex-basis: 33.333%;
+    flex-shrink: 0;
 }
