--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -5,9 +5,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 2rem;
     color: $color-primary;
+
+    .section-container {
+        width: 100%;
+    }
 
     .section__title {
         font-size: 2rem;
