--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -109,3 +109,16 @@
     flex-basis: 33.333%;
     flex-shrink: 0;
 }
+
+.flex-basis-66 {
+    flex-basis: 66.66666%;
+    flex-shrink: 0;
+}
+
+.gap-16 {
+    gap: 16px;
+}
+
+.gap-24 {
+    gap: 24px;
+}
