--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -1,8 +1,15 @@
 
 .container {
-    max-width: 1200px;
+    max-width: 1600px;
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 40px;
+    width: 100%;
+}
+
+.container-fluid {
+    margin: 0 auto;
+    padding: 0 40px;
+    width: 100%;
 }
 
 .width-100 {
@@ -121,4 +128,8 @@
 
 .gap-24 {
     gap: 24px;
+}
+
+.gap-40 {
+    gap: 40px;
 }
