--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -31,7 +31,7 @@
   }
   
   &__brand-link {
-    font-family: $font-family-secondary;
+    font-family: $font-family-primary;
     font-weight: $font-weight-semibold;
     font-size: $font-size-xl;
     color: $color-secondary;
