--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -18,6 +18,10 @@
         @media (max-width: #{$breakpoint-sm - 1px}) {
             min-height: 250px;
             min-height: 300px;
+
+            div {
+                align-items: center;
+            }
         }
 
         @media (min-width: #{$breakpoint-sm}) and (max-width: #{$breakpoint-md - 1px}) {
@@ -27,6 +31,10 @@
         @media (min-width: #{$breakpoint-md}) {
             min-height: 350px;
         }
+    }
+
+    a.button {
+        order: 2;
     }
 }
 
@@ -77,7 +85,7 @@
         }
 
         .service-description {
-            font-size: 16px;
+            font-size: 18px;
             margin-top: 24px
         }
     }
