--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -53,7 +53,8 @@
                 flex-basis: 100% !important;
                 //max-width: 300px;
                 margin: 0 auto;
-                width: 60%
+                width: 100%;
+                max-width: 400px;
             }
 
             div {
