--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,5 +1,14 @@
 @use '../abstracts' as *;
 
+.home-content {
+    opacity: 0;
+    transition: opacity 2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+    &.home-content__visible {
+        opacity: 1;
+    }
+}
+
 .home-section__01 {
     margin-top: -80px; // To make it appears on home Screen without scrolling
 
@@ -46,8 +55,8 @@
 
     > div {
         display: flex;
-        gap: 40px;
         flex-wrap: wrap;
+        gap: 4rem 2rem;
         justify-content: space-around;
     }
 
