--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -13,7 +13,7 @@
     margin-top: -80px; // To make it appears on home Screen without scrolling
 
     .image__home-section-01 {
-        background-image: url('/public/images/daniela-porta.jpg');
+        background-image: url('/public/images/daniela-porta-04.png');
         background-size: cover;
         background-position: center;
         aspect-ratio: 3/4;
