feat: re arrange hero

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -30,4 +30,8 @@ a.button {
     &:active {
       transform: translateY(0);
     }
+
+    &.secondary {
+      background-color: white;
+    }
   }
