feat: update pictures

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -126,9 +126,9 @@
 
     .hero-content__image {
         //background-image: url('/public/images/daniela-porta-02.jpg');
-        background-image: url('/public/images/test-home-03.jpg');
+        background-image: url('/public/images/test-home-04.jpg');
         background-size: cover;
-        background-position: center;
+        background-position: top center;
         aspect-ratio: 3/4;
         //border-radius: 50% 50% 0 0 / 40% 40% 0 0;
         border-radius: 16px;
