--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -22,7 +22,6 @@
         align-items: center;
         justify-content: space-between;
         gap: 80px;
-        margin-bottom: 80px;
         width: 100%;
         max-width: 1200px;
 
@@ -37,10 +36,18 @@
         }
     }
 
+    .webtitle__tagline {
+        font-size: clamp(24px, 3vw, 32px);
+        font-weight: 400;
+        line-height: 1.5;
+        color: $color-primary;
+        margin: 0;
+    }
+
     .hero-identity__text {
         flex: 1;
         max-width: 650px;
-        margin: 80px 0;
+        margin: 40px 0 80px 0;
 
         @media (max-width: #{$breakpoint-md - 1px}) {
             text-align: center;
@@ -48,7 +55,7 @@
         }
     }
 
-    h1, h2, .hero-tagline, .button-wrapper {
+    h1, .hero-tagline, .button-wrapper, .webtitle__tagline {
         color: $color-primary;
         opacity: 0;
         transform: translateY(20px);
@@ -60,7 +67,7 @@
         }
     }
 
-    .web-title {
+    .webtitle {
         font-size: clamp(44px, 5vw, 86px);
         font-weight: 400;
         margin-bottom: 8px;
