feat: update header and order of ing in hero section

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     @media (max-width: #{$breakpoint-sm - 1px}) {
-        padding: 15vh 24px 60px;
+        padding: 20vh 24px 60px;
     }
 
     // Identity section (name, title, tagline, image)
@@ -52,6 +52,7 @@
         @media (max-width: #{$breakpoint-md - 1px}) {
             text-align: center;
             max-width: 100%;
+            order: 2;
         }
     }
 
@@ -156,6 +157,7 @@
             width: 100%;
             max-width: 320px;
             min-height: 380px;
+            order: 1;
         }
 
         @media (max-width: #{$breakpoint-sm - 1px}) {
